src/objects/Shipping_Location__c.object
<CustomObject>
    <fields>
        <fullName>BG__c</fullName>
        <description>This field allows to define a minimum maintenance fee for parts of a Quote within a certain portfolio</description>
        <label>BG</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Portfolio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>ION</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEO_Mini_Maint_EUR__c</fullName>
        <label>LEO Mini Maint EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEO_Mini_Maint_USD__c</fullName>
        <label>LEO Mini Maint USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Maint_EUR__c</fullName>
        <label>Min Maint EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Maint_USD__c</fullName>
        <label>Min Maint USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Cluster__c</fullName>
        <label>Pricing Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Cluster</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Discount_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Discount Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipping Locations and Min Maintenance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Pricing_Cluster__c</columns>
        <columns>Shipping_Location__c</columns>
        <columns>Maintenance_Type__c</columns>
        <columns>Quote_Type__c</columns>
        <columns>Min_Maint_EUR__c</columns>
        <columns>Min_Maint_USD__c</columns>
        <columns>LEO_Mini_Maint_EUR__c</columns>
        <columns>LEO_Mini_Maint_USD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Shipping Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Locations and Min Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>